MDEV-9032: MariaDB 10.1.8 crashes at startup

Add diagnostics when externally stored field is freed but
rollback ctx is not what we expect.