storage/xtradb/btr/btr0cur.cc
@@ -5338,7 +5338,21 @@ btr_free_externally_stored_field(
 		/* In the rollback, we may encounter a clustered index
 		record with some unwritten off-page columns. There is
 		nothing to free then. */
-		ut_a(rb_ctx != RB_NONE);
+		if (rb_ctx != RB_NONE) {
+			char		buf[3 * 512];
+			char		*bufend;
+			ulint ispace = dict_index_get_space(index);
+			bufend = innobase_convert_name(buf, sizeof buf,
+				index->name, strlen(index->name),
+				NULL,
+				FALSE);
+			buf[bufend - buf]='\0';
+			ib_logf(IB_LOG_LEVEL_ERROR, "Unwritten off-page columns in "
+				"rollback context %d. Table %s index %s space_id %lu "
+				"index space %lu.",
+				rb_ctx, index->table->name, buf, space_id, ispace);
+		}
+
 		return;
 	}
 
